--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -11,6 +11,7 @@
 @import '../scss/base/footer';
 @import '../scss/pages/search';
 @import '../scss/pages/home';
+@import '../scss/pages/detail';
 @import '../scss/themes/LightDark';
 @import '../scss/component/BackToTop';
 @import './base/customize';
