xong chuc nang add to cart

--- a/src/assets/scss/pages/_carts.scss
+++ b/src/assets/scss/pages/_carts.scss
@@ -1,7 +1,7 @@
 .carts {
     background: $bg-gradient-light-1;
     padding-top: 64px;
-    height: 500px;
+    height: auto;
 
     h2 {
         color: $text-c0-white;
