xong chuc nang update profile va hien thi so luong cart tren thanh header & chuc nang hien thi so cart ben page cart (chua xong het page cart)

--- a/src/assets/scss/base/_customize.scss
+++ b/src/assets/scss/base/_customize.scss
@@ -66,8 +66,13 @@ h2 {
   line-height: $lh-c4;
 }
 
-.custom_feature h3 {
+.p-err{
+  font-weight: 500;
+  color: rgb(160, 35, 30);
+  font-size: 17px;
+}
 
+.custom_feature h3 {
   background: linear-gradient(180deg, #F21299 0%, #1B02B5 100%);
   padding: 10px 0px;
 }
