--- a/src/assets/scss/themes/_LightDark.scss
+++ b/src/assets/scss/themes/_LightDark.scss
@@ -108,7 +108,7 @@
   .main-input p svg,
   .main-input input,
   .gender span,
-  .footer h3,.footer li,.copy-right p,.rating-button button,.card,.detail-card-right, .arrowDrop {
+  .footer h3,.footer li,.copy-right p,.rating-button button,.card,.detail-card-right, .arrowDrop,.quantily-number {
     color: $text-c0-white !important;
   }
 
