--- a/src/assets/scss/pages/_detail.scss
+++ b/src/assets/scss/pages/_detail.scss
@@ -104,11 +104,12 @@
 
       .btn-add-to-cart {
         background: $bg-gradient-light-4;
-
+margin-right: 6px;
         a {
           color: $text-c0-white;
         }
       }
+
     }
   }
 
